--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 210,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 239,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -261,7 +261,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 240,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -287,7 +287,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 241,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -424,9 +424,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 242,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -436,6 +438,7 @@
     "    from functools import reduce \n",
     "\n",
     "def factor_send_sp_msg(self, other):\n",
+    "    print('{} sending message to {}'.format(self.name, other.name))\n",
     "    \"\"\"\n",
     "    Sends a message to a variable from the current factor.\n",
     "    - other: Variable to send message to.\n",
@@ -443,18 +446,15 @@
     "    if type(other) is not Variable:\n",
     "        raise TypeError('Factor nodes can only send messages to Variables.')\n",
     "\n",
-    "    if len(self.in_msgs) != len(self.neighbours):\n",
-    "        raise Exception('Have not received all incoming messages.')\n",
-    "\n",
     "    if other not in self.neighbours:\n",
     "        raise ValueError('Cannot send message to a non-neighbour node.')\n",
     "\n",
     "    # Get messages from all neighbours except other\n",
     "    messages = [self.in_msgs[neighbour] for neighbour in self.neighbours if neighbour != other]\n",
-    "\n",
+    "    \n",
     "    # Obtain product of all received messages\n",
     "    # \\prod \\mu_x -> f(x)\n",
-    "    received_prod = reduce(np.outer, messages)\n",
+    "    received_prod = reduce(np.outer, messages) if messages else 1\n",
     "\n",
     "    # Obtain indices to reduce in tensordot\n",
     "    # Tensordot is essentially dor product extended to more dimensions. \n",
@@ -490,19 +490,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 243,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "def variable_send_sp_message(self, other):\n",
+    "    print('{} sending message to {}'.format(self.name, other.name))\n",
     "    if type(other) is not Factor:\n",
     "        raise TypeError('Variable nodes can only send messages to Factor nodes.')\n",
     "        \n",
-    "    if len(self.in_msgs) != len(self.neighbours):\n",
-    "        raise Exception('Have not received all incoming messages.')\n",
-    "    \n",
     "    if other not in self.neighbours:\n",
     "        raise ValueError('Cannot send message to a non-neighbour node.')\n",
     "    \n",
@@ -535,9 +535,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 244,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -550,9 +552,9 @@
     "        raise Exception('Have not received messages from all neighbours')\n",
     "    \n",
     "    # \\mu_alpha * \\mu_beta\n",
-    "    messages = self.in_msgs.values()\n",
+    "    messages = list(self.in_msgs.values())\n",
     "    unnorm_marginal = np.prod(messages, axis=0) * self.observed_state\n",
-    "    Z = Z if Z is not None else np.sum(unnorm_marginal)\n",
+    "    Z = Z if Z is not None else sum(unnorm_marginal)\n",
     "    return unnorm_marginal / Z, Z\n",
     "\n",
     "Variable.marginal = variable_marginal"
@@ -580,9 +582,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 245,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -596,13 +600,13 @@
     "        num_msgs = len(self.in_msgs)\n",
     "        \n",
     "        # Idea here is that to check that we have messages from all other nodes\n",
-    "        for neighbour in self.neighbours:\n",
-    "            if neighbour == other:\n",
-    "                continue\n",
-    "            \n",
+    "        for neighbour in set(self.neighbours) - {other}:\n",
     "            # Node has received message from all nodes, including this one.\n",
     "            # or has received message from all other nodes.\n",
-    "            if (neighbour in self.in_msgs and num_msgs == num_nbs) or num_msgs == num_nbs - 1:\n",
+    "            if neighbour in self.in_msgs:\n",
+    "                if num_nbs == num_msgs:\n",
+    "                    self.pending.update([neighbour])\n",
+    "            elif num_msgs == num_nbs - 1:\n",
     "                self.pending.update([neighbour])\n",
     "            \n",
     "Node.receive_msg = node_receive_msg"
@@ -623,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 246,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -637,18 +641,86 @@
     "    node_list is a list of nodes ordered from leaf -> root.\n",
     "    \"\"\"\n",
     "    for node in node_list:\n",
-    "        for pending in node.pending:\n",
+    "        for pending in list(node.pending):\n",
     "            node.send_sp_message(pending)\n",
     "\n",
     "# Variables and Factors are initialized in first cell.\n",
     "# They are: infl, sthroat, fever, bronch, chough, smokes, wheeze\n",
-    "# Initialize leaf nodes as specified.\n",
-    "f1.pending.add(infl)\n",
-    "f7.pending.add(smokes)\n",
-    "sthroat.pending.add(f2)\n",
-    "fever.pending.add(f3)\n",
-    "chough.pending.add(f5)\n",
-    "wheeze.pending.add(f6)"
+    "# Initialize leaf nodes as specified, use 'update' so \n",
+    "# we dont reinitialize 100 times.\n",
+    "f1.pending.update([infl])\n",
+    "f7.pending.update([smokes])\n",
+    "sthroat.pending.update([f2])\n",
+    "fever.pending.update([f3])\n",
+    "chough.pending.update([f5])\n",
+    "wheeze.pending.update([f6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f1 sending message to Influenza\n",
+      "f7 sending message to Smokes\n",
+      "SoreThroat sending message to f2\n",
+      "Fever sending message to f3\n",
+      "Wheeze sending message to f6\n",
+      "Choughing sending message to f5\n",
+      "f2 sending message to Influenza\n",
+      "f3 sending message to Influenza\n",
+      "f5 sending message to Bronchitis\n",
+      "f6 sending message to Bronchitis\n",
+      "Influenza sending message to f4\n",
+      "Bronchitis sending message to f4\n",
+      "f4 sending message to Smokes\n",
+      "Smokes sending message to f7\n",
+      "Smokes sending message to f4\n",
+      "f4 sending message to Influenza\n",
+      "f4 sending message to Bronchitis\n",
+      "Bronchitis sending message to f5\n",
+      "Bronchitis sending message to f6\n",
+      "Influenza sending message to f3\n",
+      "Influenza sending message to f1\n",
+      "Influenza sending message to f2\n",
+      "f6 sending message to Wheeze\n",
+      "f5 sending message to Choughing\n",
+      "f3 sending message to Fever\n",
+      "f2 sending message to SoreThroat\n",
+      "Marginal of SoreThroat is [ 0.98405  0.01595]\n",
+      "Marginal of Fever is [ 0.9075  0.0925]\n",
+      "Marginal of Wheeze is [ 0.89179338  0.10820662]\n",
+      "Marginal of Choughing is [ 0.79934752  0.20065248]\n",
+      "Marginal of Influenza is [ 0.95  0.05]\n",
+      "Marginal of Bronchitis is [ 0.821024  0.178976]\n",
+      "Marginal of Smokes is [ 0.8  0.2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### TEST RUN\n",
+    "#### Set Sore Throat as root node. \n",
+    "node_list = [f1, f7, sthroat, fever, wheeze, chough, f2,f3,f5,f6,infl,bronch,f4,smokes]\n",
+    "\n",
+    "# first pass\n",
+    "sum_product(node_list)\n",
+    "\n",
+    "# second pass\n",
+    "sum_product(reversed(node_list))\n",
+    "\n",
+    "# marignals\n",
+    "for node in node_list:\n",
+    "    if type(node) is Variable:\n",
+    "        marginal, _ = node.marginal(None)\n",
+    "        print('Marginal of {} is {}'.format(node.name,marginal))"
    ]
   },
   {
@@ -664,9 +736,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 188,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
