update current root name

--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 248,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -669,32 +669,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "f1 sending message to Influenza\n",
-      "f7 sending message to Smokes\n",
-      "SoreThroat sending message to f2\n",
-      "Fever sending message to f3\n",
-      "Wheeze sending message to f6\n",
-      "Choughing sending message to f5\n",
-      "f2 sending message to Influenza\n",
-      "f3 sending message to Influenza\n",
-      "f5 sending message to Bronchitis\n",
-      "f6 sending message to Bronchitis\n",
-      "Influenza sending message to f4\n",
-      "Bronchitis sending message to f4\n",
-      "f4 sending message to Smokes\n",
-      "Smokes sending message to f7\n",
-      "Smokes sending message to f4\n",
-      "f4 sending message to Influenza\n",
-      "f4 sending message to Bronchitis\n",
-      "Bronchitis sending message to f5\n",
-      "Bronchitis sending message to f6\n",
-      "Influenza sending message to f3\n",
-      "Influenza sending message to f1\n",
-      "Influenza sending message to f2\n",
-      "f6 sending message to Wheeze\n",
-      "f5 sending message to Choughing\n",
-      "f3 sending message to Fever\n",
-      "f2 sending message to SoreThroat\n",
       "Marginal of SoreThroat is [ 0.98405  0.01595]\n",
       "Marginal of Fever is [ 0.9075  0.0925]\n",
       "Marginal of Wheeze is [ 0.89179338  0.10820662]\n",
@@ -707,7 +681,7 @@
    ],
    "source": [
     "#### TEST RUN\n",
-    "#### Set Sore Throat as root node. \n",
+    "#### Set smokes as root node. \n",
     "node_list = [f1, f7, sthroat, fever, wheeze, chough, f2,f3,f5,f6,infl,bronch,f4,smokes]\n",
     "\n",
     "# first pass\n",
