--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -261,7 +261,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -287,7 +287,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -457,7 +457,7 @@
     "    received_prod = reduce(np.outer, messages) if messages else 1\n",
     "\n",
     "    # Obtain indices to reduce in tensordot\n",
-    "    # Tensordot is essentially dor product extended to more dimensions. \n",
+    "    # Tensordot is essentially dot product extended to more dimensions. \n",
     "    # It will perform sum-reduction, i.e. reduce the respective axes after multiplication\n",
     "    # by summing over them.\n",
     "    # See: https://docs.scipy.org/doc/numpy/reference/generated/numpy.tensordot.html\n",
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -669,6 +669,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "f1 sending message to Influenza\n",
+      "f7 sending message to Smokes\n",
+      "SoreThroat sending message to f2\n",
+      "Fever sending message to f3\n",
+      "Wheeze sending message to f6\n",
+      "Choughing sending message to f5\n",
+      "f2 sending message to Influenza\n",
+      "f3 sending message to Influenza\n",
+      "f5 sending message to Bronchitis\n",
+      "f6 sending message to Bronchitis\n",
+      "Influenza sending message to f4\n",
+      "Bronchitis sending message to f4\n",
+      "f4 sending message to Smokes\n",
+      "Smokes sending message to f4\n",
+      "Smokes sending message to f7\n",
+      "f4 sending message to Influenza\n",
+      "f4 sending message to Bronchitis\n",
+      "Bronchitis sending message to f6\n",
+      "Bronchitis sending message to f5\n",
+      "Influenza sending message to f1\n",
+      "Influenza sending message to f3\n",
+      "Influenza sending message to f2\n",
+      "f6 sending message to Wheeze\n",
+      "f5 sending message to Choughing\n",
+      "f3 sending message to Fever\n",
+      "f2 sending message to SoreThroat\n",
       "Marginal of SoreThroat is [ 0.98405  0.01595]\n",
       "Marginal of Fever is [ 0.9075  0.0925]\n",
       "Marginal of Wheeze is [ 0.89179338  0.10820662]\n",
