--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -261,7 +261,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -287,7 +287,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -457,7 +457,7 @@
     "    received_prod = reduce(np.outer, messages) if messages else 1\n",
     "\n",
     "    # Obtain indices to reduce in tensordot\n",
-    "    # Tensordot is essentially dor product extended to more dimensions. \n",
+    "    # Tensordot is essentially dot product extended to more dimensions. \n",
     "    # It will perform sum-reduction, i.e. reduce the respective axes after multiplication\n",
     "    # by summing over them.\n",
     "    # See: https://docs.scipy.org/doc/numpy/reference/generated/numpy.tensordot.html\n",
@@ -466,7 +466,7 @@
     "\n",
     "    # Compute message\n",
     "    message = np.tensordot(self.f, received_prod, axes=(f_axes, m_axes))\n",
-    "\n",
+    "    print 'self_f: %s \\nrec_prod: %s \\n message: %s\\n' %(self.f, received_prod, message)\n",
     "    # Send message\n",
     "    other.receive_msg(self, message)\n",
     "    \n",
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -669,6 +669,132 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "f1 sending message to Influenza\n",
+      "self_f: [ 0.95  0.05] \n",
+      "rec_prod: 1 \n",
+      " message: [ 0.95  0.05]\n",
+      "\n",
+      "f7 sending message to Smokes\n",
+      "self_f: [ 0.8  0.2] \n",
+      "rec_prod: 1 \n",
+      " message: [ 0.8  0.2]\n",
+      "\n",
+      "SoreThroat sending message to f2\n",
+      "Fever sending message to f3\n",
+      "Wheeze sending message to f6\n",
+      "Choughing sending message to f5\n",
+      "f2 sending message to Influenza\n",
+      "self_f: [[ 0.999  0.001]\n",
+      " [ 0.7    0.3  ]] \n",
+      "rec_prod: [ 1.  1.] \n",
+      " message: [ 1.  1.]\n",
+      "\n",
+      "f3 sending message to Influenza\n",
+      "self_f: [[ 0.95  0.05]\n",
+      " [ 0.1   0.9 ]] \n",
+      "rec_prod: [ 1.  1.] \n",
+      " message: [ 1.  1.]\n",
+      "\n",
+      "f5 sending message to Bronchitis\n",
+      "self_f: [[ 0.93  0.07]\n",
+      " [ 0.2   0.8 ]] \n",
+      "rec_prod: [ 1.  1.] \n",
+      " message: [ 1.  1.]\n",
+      "\n",
+      "f6 sending message to Bronchitis\n",
+      "self_f: [[ 0.999  0.001]\n",
+      " [ 0.4    0.6  ]] \n",
+      "rec_prod: [ 1.  1.] \n",
+      " message: [ 1.  1.]\n",
+      "\n",
+      "Influenza sending message to f2\n",
+      "Influenza sending message to f3\n",
+      "Influenza sending message to f1\n",
+      "Influenza sending message to f4\n",
+      "Bronchitis sending message to f4\n",
+      "Bronchitis sending message to f5\n",
+      "Bronchitis sending message to f6\n",
+      "f4 sending message to Bronchitis\n",
+      "self_f: [[[  9.99900000e-01   1.00000000e-04]\n",
+      "  [  3.00000000e-01   7.00000000e-01]]\n",
+      "\n",
+      " [[  1.00000000e-01   9.00000000e-01]\n",
+      "  [  1.00000000e-02   9.90000000e-01]]] \n",
+      "rec_prod: [[ 0.76  0.19]\n",
+      " [ 0.04  0.01]] \n",
+      " message: [ 0.821024  0.178976]\n",
+      "\n",
+      "f4 sending message to Influenza\n",
+      "self_f: [[[  9.99900000e-01   1.00000000e-04]\n",
+      "  [  3.00000000e-01   7.00000000e-01]]\n",
+      "\n",
+      " [[  1.00000000e-01   9.00000000e-01]\n",
+      "  [  1.00000000e-02   9.90000000e-01]]] \n",
+      "rec_prod: [[ 0.8  0.8]\n",
+      " [ 0.2  0.2]] \n",
+      " message: [ 1.  1.]\n",
+      "\n",
+      "f4 sending message to Smokes\n",
+      "self_f: [[[  9.99900000e-01   1.00000000e-04]\n",
+      "  [  3.00000000e-01   7.00000000e-01]]\n",
+      "\n",
+      " [[  1.00000000e-01   9.00000000e-01]\n",
+      "  [  1.00000000e-02   9.90000000e-01]]] \n",
+      "rec_prod: [[ 0.95  0.95]\n",
+      " [ 0.05  0.05]] \n",
+      " message: [ 1.  1.]\n",
+      "\n",
+      "Smokes sending message to f4\n",
+      "Smokes sending message to f7\n",
+      "f4 sending message to Influenza\n",
+      "self_f: [[[  9.99900000e-01   1.00000000e-04]\n",
+      "  [  3.00000000e-01   7.00000000e-01]]\n",
+      "\n",
+      " [[  1.00000000e-01   9.00000000e-01]\n",
+      "  [  1.00000000e-02   9.90000000e-01]]] \n",
+      "rec_prod: [[ 0.8  0.8]\n",
+      " [ 0.2  0.2]] \n",
+      " message: [ 1.  1.]\n",
+      "\n",
+      "f4 sending message to Bronchitis\n",
+      "self_f: [[[  9.99900000e-01   1.00000000e-04]\n",
+      "  [  3.00000000e-01   7.00000000e-01]]\n",
+      "\n",
+      " [[  1.00000000e-01   9.00000000e-01]\n",
+      "  [  1.00000000e-02   9.90000000e-01]]] \n",
+      "rec_prod: [[ 0.76  0.19]\n",
+      " [ 0.04  0.01]] \n",
+      " message: [ 0.821024  0.178976]\n",
+      "\n",
+      "Bronchitis sending message to f6\n",
+      "Bronchitis sending message to f5\n",
+      "Influenza sending message to f2\n",
+      "Influenza sending message to f1\n",
+      "Influenza sending message to f3\n",
+      "f6 sending message to Wheeze\n",
+      "self_f: [[ 0.999  0.001]\n",
+      " [ 0.4    0.6  ]] \n",
+      "rec_prod: [ 0.821024  0.178976] \n",
+      " message: [ 0.89179338  0.10820662]\n",
+      "\n",
+      "f5 sending message to Choughing\n",
+      "self_f: [[ 0.93  0.07]\n",
+      " [ 0.2   0.8 ]] \n",
+      "rec_prod: [ 0.821024  0.178976] \n",
+      " message: [ 0.79934752  0.20065248]\n",
+      "\n",
+      "f3 sending message to Fever\n",
+      "self_f: [[ 0.95  0.05]\n",
+      " [ 0.1   0.9 ]] \n",
+      "rec_prod: [ 0.95  0.05] \n",
+      " message: [ 0.9075  0.0925]\n",
+      "\n",
+      "f2 sending message to SoreThroat\n",
+      "self_f: [[ 0.999  0.001]\n",
+      " [ 0.7    0.3  ]] \n",
+      "rec_prod: [ 0.95  0.05] \n",
+      " message: [ 0.98405  0.01595]\n",
+      "\n",
       "Marginal of SoreThroat is [ 0.98405  0.01595]\n",
       "Marginal of Fever is [ 0.9075  0.0925]\n",
       "Marginal of Wheeze is [ 0.89179338  0.10820662]\n",
@@ -769,6 +895,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def factor_send_ms_msg(self, other):\n",
+    "    print('{} sending message to {}'.format(self.name, other.name))\n",
+    "    \"\"\"\n",
+    "    Sends a message to a variable from the current factor.\n",
+    "    - other: Variable to send message to.\n",
+    "    \"\"\"\n",
+    "    if type(other) is not Variable:\n",
+    "        raise TypeError('Factor nodes can only send messages to Variables.')\n",
+    "\n",
+    "    if other not in self.neighbours:\n",
+    "        raise ValueError('Cannot send message to a non-neighbour node.')\n",
+    "\n",
+    "    # Get messages from all neighbours except other\n",
+    "    messages = [self.in_msgs[neighbour] for neighbour in self.neighbours if neighbour != other]\n",
+    "\n",
+    "    # Obtain sum of all received messages\n",
+    "    # \\sum \\mu_x -> f(x)\n",
+    "    received_sum = reduce(np.subtract.outer, messages) if messages else 0\n",
+    "\n",
+    "    message = np.log(self.f) + received_sum\n",
+    "    m_axes = range(len(self.neighbours) - 1)\n",
+    "    m_axes = tuple(m_axes)\n",
+    "\n",
+    "    message = np.amax(message, axis=m_axes)\n",
+    "\n",
+    "    # Send message\n",
+    "    other.receive_msg(self, message)\n",
+    "    \n",
+    "    # \"Modify the send_msg functions to remove pending messages as they are sent.\"\n",
+    "    self.pending.remove(other)\n",
+    "\n",
+    "Factor.send_ms_message = factor_send_ms_msg"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
@@ -777,6 +945,38 @@
    "source": [
     "### 2.2 Variable to factor messages (10 points)\n",
     "Implement the `Variable.send_ms_msg` function that sends Variable -> Factor messages for the max-sum algorithm."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def variable_send_ms_message(self, other):\n",
+    "    print('{} sending message to {}'.format(self.name, other.name))\n",
+    "    if type(other) is not Factor:\n",
+    "        raise TypeError('Variable nodes can only send messages to Factor nodes.')\n",
+    "        \n",
+    "    if other not in self.neighbours:\n",
+    "        raise ValueError('Cannot send message to a non-neighbour node.')\n",
+    "    \n",
+    "    # Get messages from all neighbours except other\n",
+    "    messages = [self.in_msgs[neighbour] for neighbour in self.neighbours if neighbour != other]\n",
+    "    \n",
+    "    # Get message to be sent\n",
+    "    # <NOT SURE about * self.observed_state>\n",
+    "    message = np.sum(messages, axis=0) * self.observed_state \n",
+    "    \n",
+    "    # Send message to neighbour factor.\n",
+    "    other.receive_msg(self, message)\n",
+    "    \n",
+    "    # \"Modify the send_msg functions to remove pending messages as they are sent.\"\n",
+    "    self.pending.remove(other)\n",
+    "    \n",
+    "Variable.send_ms_message = variable_send_ms_message"
    ]
   },
   {
@@ -793,15 +993,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f1 sending message to Influenza\n",
+      "f7 sending message to Smokes\n",
+      "SoreThroat sending message to f2\n",
+      "Fever sending message to f3\n",
+      "Wheeze sending message to f6\n",
+      "Choughing sending message to f5\n",
+      "f2 sending message to Influenza\n",
+      "f3 sending message to Influenza\n",
+      "f5 sending message to Bronchitis\n",
+      "f6 sending message to Bronchitis\n",
+      "Influenza sending message to f2\n",
+      "Influenza sending message to f3\n",
+      "Influenza sending message to f1\n",
+      "Influenza sending message to f4\n",
+      "Bronchitis sending message to f4\n",
+      "Bronchitis sending message to f5\n",
+      "Bronchitis sending message to f6\n",
+      "f4 sending message to Bronchitis\n",
+      "f4 sending message to Influenza\n",
+      "f4 sending message to Smokes\n",
+      "Smokes sending message to f4\n",
+      "Smokes sending message to f7\n",
+      "f4 sending message to Influenza\n",
+      "f4 sending message to Bronchitis\n",
+      "Bronchitis sending message to f6\n",
+      "Bronchitis sending message to f5\n",
+      "Influenza sending message to f2\n",
+      "Influenza sending message to f1\n",
+      "Influenza sending message to f3\n",
+      "f6 sending message to Wheeze\n",
+      "f5 sending message to Choughing\n",
+      "f3 sending message to Fever\n",
+      "f2 sending message to SoreThroat\n",
+      "MAP:\n",
+      "Name: SoreThroat , Solution MAP-value: 0\n",
+      "Name: Fever , Solution MAP-value: 0\n",
+      "Name: Wheeze , Solution MAP-value: 1\n",
+      "Name: Choughing , Solution MAP-value: 1\n",
+      "Name: Influenza , Solution MAP-value: 0\n",
+      "Name: Bronchitis , Solution MAP-value: 1\n",
+      "Name: Smokes , Solution MAP-value: 0\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR ANSWER HERE"
+    "# YOUR ANSWER HERE\n",
+    "def max_sum(node_list):\n",
+    "    \"\"\"\n",
+    "    node_list is a list of nodes ordered from leaf -> root.\n",
+    "    \"\"\"\n",
+    "    for node in node_list:\n",
+    "        for pending in list(node.pending):\n",
+    "            node.send_ms_message(pending)\n",
+    "\n",
+    "# Variables and Factors are initialized in first cell.\n",
+    "# They are: infl, sthroat, fever, bronch, chough, smokes, wheeze\n",
+    "# Initialize leaf nodes as specified, use 'update' so \n",
+    "# we dont reinitialize 100 times.\n",
+    "f1.pending.update([infl])\n",
+    "f7.pending.update([smokes])\n",
+    "sthroat.pending.update([f2])\n",
+    "fever.pending.update([f3])\n",
+    "chough.pending.update([f5])\n",
+    "wheeze.pending.update([f6])\n",
+    "#### TEST RUN\n",
+    "#### Set smokes as root node. \n",
+    "node_list = [f1, f7, sthroat, fever, wheeze, chough, f2,f3,f5,f6,infl,bronch,f4,smokes]\n",
+    "\n",
+    "# first pass\n",
+    "max_sum(node_list)\n",
+    "\n",
+    "# second pass\n",
+    "max_sum(reversed(node_list))\n",
+    "\n",
+    "# SHOULD USE FUNCTIONS HERE\n",
+    "print 'MAP:'\n",
+    "for node in node_list:\n",
+    "    if type(node) is Variable:\n",
+    "        messages = [node.in_msgs[neighbour] for neighbour in node.neighbours]\n",
+    "        message = np.sum(messages, axis=0) * node.observed_state\n",
+    "        map_node = np.argmax(message)\n",
+    "        print 'Name: %s , Solution MAP-value: %s' %(node.name, map_node)"
    ]
   },
   {
@@ -957,21 +1241,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
