--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -424,9 +424,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -466,7 +466,7 @@
     "\n",
     "    # Compute message\n",
     "    message = np.tensordot(self.f, received_prod, axes=(f_axes, m_axes))\n",
-    "    print 'self_f: %s \\nrec_prod: %s \\n message: %s\\n' %(self.f, received_prod, message)\n",
+    "#     print 'self_f: %s \\nrec_prod: %s \\n message: %s\\n' %(self.f, received_prod, message)\n",
     "    # Send message\n",
     "    other.receive_msg(self, message)\n",
     "    \n",
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -670,131 +670,31 @@
      "output_type": "stream",
      "text": [
       "f1 sending message to Influenza\n",
-      "self_f: [ 0.95  0.05] \n",
-      "rec_prod: 1 \n",
-      " message: [ 0.95  0.05]\n",
-      "\n",
       "f7 sending message to Smokes\n",
-      "self_f: [ 0.8  0.2] \n",
-      "rec_prod: 1 \n",
-      " message: [ 0.8  0.2]\n",
-      "\n",
       "SoreThroat sending message to f2\n",
       "Fever sending message to f3\n",
       "Wheeze sending message to f6\n",
       "Choughing sending message to f5\n",
       "f2 sending message to Influenza\n",
-      "self_f: [[ 0.999  0.001]\n",
-      " [ 0.7    0.3  ]] \n",
-      "rec_prod: [ 1.  1.] \n",
-      " message: [ 1.  1.]\n",
-      "\n",
       "f3 sending message to Influenza\n",
-      "self_f: [[ 0.95  0.05]\n",
-      " [ 0.1   0.9 ]] \n",
-      "rec_prod: [ 1.  1.] \n",
-      " message: [ 1.  1.]\n",
-      "\n",
       "f5 sending message to Bronchitis\n",
-      "self_f: [[ 0.93  0.07]\n",
-      " [ 0.2   0.8 ]] \n",
-      "rec_prod: [ 1.  1.] \n",
-      " message: [ 1.  1.]\n",
-      "\n",
       "f6 sending message to Bronchitis\n",
-      "self_f: [[ 0.999  0.001]\n",
-      " [ 0.4    0.6  ]] \n",
-      "rec_prod: [ 1.  1.] \n",
-      " message: [ 1.  1.]\n",
-      "\n",
-      "Influenza sending message to f2\n",
-      "Influenza sending message to f3\n",
-      "Influenza sending message to f1\n",
       "Influenza sending message to f4\n",
       "Bronchitis sending message to f4\n",
-      "Bronchitis sending message to f5\n",
-      "Bronchitis sending message to f6\n",
-      "f4 sending message to Bronchitis\n",
-      "self_f: [[[  9.99900000e-01   1.00000000e-04]\n",
-      "  [  3.00000000e-01   7.00000000e-01]]\n",
-      "\n",
-      " [[  1.00000000e-01   9.00000000e-01]\n",
-      "  [  1.00000000e-02   9.90000000e-01]]] \n",
-      "rec_prod: [[ 0.76  0.19]\n",
-      " [ 0.04  0.01]] \n",
-      " message: [ 0.821024  0.178976]\n",
-      "\n",
-      "f4 sending message to Influenza\n",
-      "self_f: [[[  9.99900000e-01   1.00000000e-04]\n",
-      "  [  3.00000000e-01   7.00000000e-01]]\n",
-      "\n",
-      " [[  1.00000000e-01   9.00000000e-01]\n",
-      "  [  1.00000000e-02   9.90000000e-01]]] \n",
-      "rec_prod: [[ 0.8  0.8]\n",
-      " [ 0.2  0.2]] \n",
-      " message: [ 1.  1.]\n",
-      "\n",
       "f4 sending message to Smokes\n",
-      "self_f: [[[  9.99900000e-01   1.00000000e-04]\n",
-      "  [  3.00000000e-01   7.00000000e-01]]\n",
-      "\n",
-      " [[  1.00000000e-01   9.00000000e-01]\n",
-      "  [  1.00000000e-02   9.90000000e-01]]] \n",
-      "rec_prod: [[ 0.95  0.95]\n",
-      " [ 0.05  0.05]] \n",
-      " message: [ 1.  1.]\n",
-      "\n",
-      "Smokes sending message to f4\n",
       "Smokes sending message to f7\n",
-      "f4 sending message to Influenza\n",
-      "self_f: [[[  9.99900000e-01   1.00000000e-04]\n",
-      "  [  3.00000000e-01   7.00000000e-01]]\n",
-      "\n",
-      " [[  1.00000000e-01   9.00000000e-01]\n",
-      "  [  1.00000000e-02   9.90000000e-01]]] \n",
-      "rec_prod: [[ 0.8  0.8]\n",
-      " [ 0.2  0.2]] \n",
-      " message: [ 1.  1.]\n",
-      "\n",
+      "Smokes sending message to f4\n",
       "f4 sending message to Bronchitis\n",
-      "self_f: [[[  9.99900000e-01   1.00000000e-04]\n",
-      "  [  3.00000000e-01   7.00000000e-01]]\n",
-      "\n",
-      " [[  1.00000000e-01   9.00000000e-01]\n",
-      "  [  1.00000000e-02   9.90000000e-01]]] \n",
-      "rec_prod: [[ 0.76  0.19]\n",
-      " [ 0.04  0.01]] \n",
-      " message: [ 0.821024  0.178976]\n",
-      "\n",
-      "Bronchitis sending message to f6\n",
+      "f4 sending message to Influenza\n",
       "Bronchitis sending message to f5\n",
+      "Bronchitis sending message to f6\n",
+      "Influenza sending message to f3\n",
       "Influenza sending message to f2\n",
       "Influenza sending message to f1\n",
-      "Influenza sending message to f3\n",
       "f6 sending message to Wheeze\n",
-      "self_f: [[ 0.999  0.001]\n",
-      " [ 0.4    0.6  ]] \n",
-      "rec_prod: [ 0.821024  0.178976] \n",
-      " message: [ 0.89179338  0.10820662]\n",
-      "\n",
       "f5 sending message to Choughing\n",
-      "self_f: [[ 0.93  0.07]\n",
-      " [ 0.2   0.8 ]] \n",
-      "rec_prod: [ 0.821024  0.178976] \n",
-      " message: [ 0.79934752  0.20065248]\n",
-      "\n",
       "f3 sending message to Fever\n",
-      "self_f: [[ 0.95  0.05]\n",
-      " [ 0.1   0.9 ]] \n",
-      "rec_prod: [ 0.95  0.05] \n",
-      " message: [ 0.9075  0.0925]\n",
-      "\n",
       "f2 sending message to SoreThroat\n",
-      "self_f: [[ 0.999  0.001]\n",
-      " [ 0.7    0.3  ]] \n",
-      "rec_prod: [ 0.95  0.05] \n",
-      " message: [ 0.98405  0.01595]\n",
-      "\n",
       "Marginal of SoreThroat is [ 0.98405  0.01595]\n",
       "Marginal of Fever is [ 0.9075  0.0925]\n",
       "Marginal of Wheeze is [ 0.89179338  0.10820662]\n",
@@ -836,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -896,9 +796,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -919,6 +821,7 @@
     "\n",
     "    # Obtain sum of all received messages\n",
     "    # \\sum \\mu_x -> f(x)\n",
+    "    # ! Should be np.add.outer not subtract.\n",
     "    received_sum = reduce(np.subtract.outer, messages) if messages else 0\n",
     "\n",
     "    message = np.log(self.f) + received_sum\n",
@@ -949,9 +852,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -968,6 +873,9 @@
     "    \n",
     "    # Get message to be sent\n",
     "    # <NOT SURE about * self.observed_state>\n",
+    "    \n",
+    "    # ! Should be +, not *!\n",
+    "    # ! also it should be log of observed state.\n",
     "    message = np.sum(messages, axis=0) * self.observed_state \n",
     "    \n",
     "    # Send message to neighbour factor.\n",
@@ -993,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1014,37 +922,30 @@
       "f3 sending message to Influenza\n",
       "f5 sending message to Bronchitis\n",
       "f6 sending message to Bronchitis\n",
-      "Influenza sending message to f2\n",
       "Influenza sending message to f3\n",
-      "Influenza sending message to f1\n",
+      "Influenza sending message to f2\n",
       "Influenza sending message to f4\n",
+      "Influenza sending message to f1\n",
+      "Bronchitis sending message to f5\n",
+      "Bronchitis sending message to f6\n",
       "Bronchitis sending message to f4\n",
-      "Bronchitis sending message to f5\n",
-      "Bronchitis sending message to f6\n",
       "f4 sending message to Bronchitis\n",
-      "f4 sending message to Influenza\n",
       "f4 sending message to Smokes\n",
-      "Smokes sending message to f4\n",
-      "Smokes sending message to f7\n",
       "f4 sending message to Influenza\n",
+      "Smokes sending message to f7\n",
+      "Smokes sending message to f4\n",
       "f4 sending message to Bronchitis\n",
-      "Bronchitis sending message to f6\n",
+      "f4 sending message to Influenza\n",
       "Bronchitis sending message to f5\n",
+      "Bronchitis sending message to f6\n",
+      "Influenza sending message to f3\n",
       "Influenza sending message to f2\n",
       "Influenza sending message to f1\n",
-      "Influenza sending message to f3\n",
       "f6 sending message to Wheeze\n",
       "f5 sending message to Choughing\n",
       "f3 sending message to Fever\n",
       "f2 sending message to SoreThroat\n",
-      "MAP:\n",
-      "Name: SoreThroat , Solution MAP-value: 0\n",
-      "Name: Fever , Solution MAP-value: 0\n",
-      "Name: Wheeze , Solution MAP-value: 1\n",
-      "Name: Choughing , Solution MAP-value: 1\n",
-      "Name: Influenza , Solution MAP-value: 0\n",
-      "Name: Bronchitis , Solution MAP-value: 1\n",
-      "Name: Smokes , Solution MAP-value: 0\n"
+      "MAP:\n"
      ]
     }
    ],
@@ -1079,13 +980,15 @@
     "max_sum(reversed(node_list))\n",
     "\n",
     "# SHOULD USE FUNCTIONS HERE\n",
-    "print 'MAP:'\n",
+    "print('MAP:')\n",
     "for node in node_list:\n",
     "    if type(node) is Variable:\n",
     "        messages = [node.in_msgs[neighbour] for neighbour in node.neighbours]\n",
+    "        \n",
+    "        # ! Should be + and log.\n",
     "        message = np.sum(messages, axis=0) * node.observed_state\n",
     "        map_node = np.argmax(message)\n",
-    "        print 'Name: %s , Solution MAP-value: %s' %(node.name, map_node)"
+    "#         print('Name: %s , Solution MAP-value: %s' %(node.name, map_node)"
    ]
   },
   {
@@ -1241,21 +1144,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
