--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -821,8 +821,8 @@
     "\n",
     "    # Obtain sum of all received messages\n",
     "    # \\sum \\mu_x -> f(x)\n",
-    "    # ! Should be np.add.outer not subtract.\n",
-    "    received_sum = reduce(np.subtract.outer, messages) if messages else 0\n",
+    "    # FIXED ! Should be np.add.outer not subtract.\n",
+    "    received_sum = reduce(np.add.outer, messages) if messages else 0\n",
     "\n",
     "    message = np.log(self.f) + received_sum\n",
     "    m_axes = range(len(self.neighbours) - 1)\n",
@@ -874,9 +874,9 @@
     "    # Get message to be sent\n",
     "    # <NOT SURE about * self.observed_state>\n",
     "    \n",
-    "    # ! Should be +, not *!\n",
-    "    # ! also it should be log of observed state.\n",
-    "    message = np.sum(messages, axis=0) * self.observed_state \n",
+    "    # FIXED! Should be +, not *!\n",
+    "    # FIXED! also it should be log of observed state.\n",
+    "    message = np.sum(messages, axis=0) + np.log(self.observed_state)\n",
     "    \n",
     "    # Send message to neighbour factor.\n",
     "    other.receive_msg(self, message)\n",
@@ -985,8 +985,8 @@
     "    if type(node) is Variable:\n",
     "        messages = [node.in_msgs[neighbour] for neighbour in node.neighbours]\n",
     "        \n",
-    "        # ! Should be + and log.\n",
-    "        message = np.sum(messages, axis=0) * node.observed_state\n",
+    "        # FIXED! Should be + and log.\n",
+    "        message = np.sum(messages, axis=0) + np.log(node.observed_state)\n",
     "        map_node = np.argmax(message)\n",
     "#         print('Name: %s , Solution MAP-value: %s' %(node.name, map_node)"
    ]
@@ -1144,21 +1144,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
