Answer to theoretical part

--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -769,7 +769,7 @@
     "editable": true
    },
    "source": [
-    "__YOUR ANSWER HERE__"
+    "Yes this can be done using the sum-product algorithm. To find the MAP for $p(x|y)$ we must consider the possible factorization of the components of $p(x|y)$ in the graph. We can then consider all possible states where for example $x$ is observed, and select the combination where the MAP is at its maximum. This is highly inefficient as we are recomputing messages each time we consider another state as observed. Hence, we should use the max-sum algorithm."
    ]
   },
   {
@@ -1144,21 +1144,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
